[gd_scene load_steps=3 format=3 uid="uid://btqnfps722xj7"]

[ext_resource type="Script" uid="uid://cng8vw1cl4j30" path="res://src/autoload/fullscreen_toggle/fullscreen_toggle.gd" id="1_38b55"]
[ext_resource type="PackedScene" uid="uid://beclheud7fmo4" path="res://src/config_handler/config_handler.tscn" id="2_yopfo"]

[node name="FullscreenToggle" type="Node"]
process_mode = 3
script = ExtResource("1_38b55")

[node name="ConfigHandler" parent="." instance=ExtResource("2_yopfo")]
editor_description = "Window mode defaults to exclusive fullscreen (4) if ConfigHandler fails to load a value."
section = "display"
key = "window_mode"

[connection signal="load_failed" from="ConfigHandler" to="." method="_on_config_handler_load_failed"]
[connection signal="loaded" from="ConfigHandler" to="." method="_on_config_handler_loaded"]
[connection signal="ready" from="ConfigHandler" to="ConfigHandler" method="load_value"]
